Adding Summary Sentance Structures

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -263,5 +263,32 @@
   "StatusUnsavedFilters": "You have unsaved filters.",
   "StatusInvalidDataFoundandRemoved": "Invalid data found and removed, check your settings.",
   "CommentLoggedAsPartOfThis": "Logged as part of this",
-  "CommentParentPlay": "Parent Play"
+  "CommentParentPlay": "Parent Play",
+  "SummarySentence-You_are_logging_a_play_of": "You are logging a play of $2, which you played $3.",
+  "SummarySentence-You_are_logging_a_play_of_in_location": "You are logging a play of $2, which you played $3 in $4.",
+  "SummarySentence-You_are_logging_plural_plays_of": "You are logging $1 plays of $2, which you played $3.",
+  "SummarySentence-You_are_logging_plural_plays_of_in_location": "You are logging $1 plays of $2, which you played $3 in $4.",
+  "SummarySentence-You_are_logging_a_solo_play_of": "You are logging a solo play of $2, which you played $3.",
+  "SummarySentence-You_are_logging_a_solo_play_of_in_location": "You are logging a solo play of $2, which you played $3 in $4.",
+  "SummarySentence-You_are_logging_plural_solo_plays_of": "You are logging $1 solo plays of $2, which you played $3.",  
+  "SummarySentence-You_are_logging_plural_solo_plays_of_in_location": "You are logging $1 solo plays of $2, which you played $3 in $4.",  
+  "SummarySentence-today": "today",
+  "SummarySentence-yesterday": "yesterday",
+  "SummarySentence-IN_THE_FUTURE": "IN THE FUTURE",
+  "SummarySentence-OVER_A_DECADE_AGO": "OVER A DECADE AGO",
+  "SummarySentence-BEFORE_YOU_WERE_BORN": "BEFORE YOU WERE BORN",
+  "SummarySentence-OVER_A_YEAR_AGO": "OVER A YEAR AGO",
+  "SummarySentence-on_date": "on $1",
+  "SummarySentence-There_were_plural_players": " There were $1 players.",
+  "SummarySentence-There_were_plural_players_and_1_winner": " There were $1 players and $2 won.",
+  "SummarySentence-There_were_plural_players_and_2_winners": " There were $1 players and the winners were $2 and $3.",
+  "SummarySentence-There_were_plural_players_and_3_winners": " There were $1 players and the winners were $2, $3, and $4.",
+  "SummarySentence-There_were_plural_players_and_many_winners": " There were $1 players and many winners.",
+  "SummarySentence-There_were_plural_players_and_all_won": " There were $1 players and everybody won.",
+  "SummarySentence-There_were_2_players_and_2_winners": " There were 2 players and they both won.",
+  "SummarySentence-The_game_lasted_1_minute": " The game lasted 1 minute.",
+  "SummarySentence-The_game_lasted_plural_minutes": " The game lasted $1 minutes.",
+  "SummarySentence-Each_game_lasted_1_minute": " Each game lasted 1 minute.",
+  "SummarySentence-The_game_lasted_plural_minutes": " Each game lasted $1 minutes.",
+  "SummarySentence-Nicely_done": " Nicely done!"
 }
