Adding Italian translation

--- a/Source Code/i18n/list.json
+++ b/Source Code/i18n/list.json
@@ -1,4 +1,5 @@
 {
   "en":{"LocalName":"English (US)", "EnglishName":"English (US)"},
-  "es":{"LocalName":"Español", "EnglishName":"Spanish"}
+  "es":{"LocalName":"Español", "EnglishName":"Spanish"},
+  "il":{"LocalName":"Italiano", "EnglishName":"Italian"}
 }
