--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -42,7 +42,7 @@
   "MainVGG": "VGG",
   "MainRPG": "RPG",
   "MainRPGItem": "Oggetto",
-  "MainPlaceholderBGG": "inserisci Gioco da Tavolo”,
+  "MainPlaceholderBGG": "inserisci Gioco da Tavolo",
   "MainPlaceholderVGG": "inserisci Videogioco",
   "MainPlaceholderRPG": "inserisci GDR",
   "MainPlaceholderRPGItem": " inserisci oggetto GDR ",
