Noreen, i18n, add to favs
Updated Noreen's Win Comments to not delete all of the text.
Added some i18n fields.
Made the Add to Favorties button stay in place when loading a game from
play history.

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -290,5 +290,8 @@
   "SummarySentence_The_game_lasted_plural_minutes": " The game lasted $1 minutes.",
   "SummarySentence_Each_game_lasted_1_minute": " Each game lasted 1 minute.",
   "SummarySentence_Each_game_lasted_plural_minutes": " Each game lasted $1 minutes.",
-  "SummarySentence_Nicely_done": " Nicely done!"
+  "SummarySentence_Nicely_done": " Nicely done!",
+  "NoreenWinComments_Won": " won",
+  "NoreenWinComments_With_a_score_of": " with a score of ",
+  "ExpansionsComments_Played_with_the_following_expansions": "Played with the following expansions:"
 }
