Exact search fix
Updated searching so exact search uses XMLAPI2 as that will actually
return all of the results, not just those from the first 100 "random"
results that BGG normally shows.

--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -79,7 +79,7 @@
   "SettingsComments": "Commenti",
   "SettingsGame": "Gioco",
   "SettingsDomainButtons": "Pulsanti dei domini",
-  "SettingsSavedPlayerNames": "Saved Player Names",
+  "SettingsSavedPlayerNames": "Nomi utente salvati",
   "SettingsEnableFilters": "Abilita filtri",
   "SettingsEnableGroups": "Abilita gruppi",
   "SettingsPlayerColumns": "Colonne dei giocatori",
