Continuing ability to sort favorites

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -126,6 +126,7 @@
   "LocationsHeader": "Saved Locations",
   "LocationsButtonSave": "Save",
   "LocationsButtonNew": "New",
+  "FavoritesOrderButtonSave": "Save Order",
   "ExpansionsHeader": "Expansion Logging",
   "ExpansionsTabExpansions": "Expansions",
   "ExpansionsTabFamily": "Family",
