--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -127,6 +127,7 @@
   "LocationsHeader": "Lugares guardados",
   "LocationsButtonSave": "Guardar",
   "LocationsButtonNew": "Nuevo",
+  "FavoritesOrderButtonSave": "Guardar Order",
   "ExpansionsHeader": "¿Expansiones?",
   "ExpansionsTabExpansions": "Expansiones",
   "ExpansionsTabFamily": "Familia",
