--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -126,6 +126,7 @@
   "LocationsHeader": "Luoghi salvati",
   "LocationsButtonSave": "Salva",
   "LocationsButtonNew": "Nuovo",
+  "FavoritesOrderButtonSave": "Salva Order",
   "ExpansionsHeader": "Registra Espansioni",
   "ExpansionsTabExpansions": "Espansioni",
   "ExpansionsTabFamily": "Famiglia",
