--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -105,6 +105,7 @@
   "SettingsDefaultPlayer": "Default Player",
   "SettingsDefaultLocation": "Default Location",
   "SettingsLanguage": "Language",
+  "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
   "SettingsNone": "none",
   "SettingsBlank": "blank",
   "SettingsSave": "Save Settings",
