--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -106,6 +106,7 @@
   "SettingsDefaultPlayer": "Jugador por defecto",
   "SettingsDefaultLocation": "Lugar por defecto",
   "SettingsLanguage": "Idioma",
+  "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
   "SettingsNone": "ninguna",
   "SettingsBlank": "vacío",
   "SettingsSave": "Guardar ajustes",
