--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -105,6 +105,7 @@
   "SettingsDefaultPlayer": "Giocatore predefinito",
   "SettingsDefaultLocation": "Luogo predefinito",
   "SettingsLanguage": "Lingua",
+  "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
   "SettingsNone": "niente",
   "SettingsBlank": "vuoto",
   "SettingsSave": "Salva Impostazioni",
