Player Sorting first attempt

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -181,6 +181,7 @@
   "StatsGameDetails": "Game Details",
   "StatsLocations": "Locations",
   "StatsDaysSince": "Days Since...",
+  "StatsGameDuration": "Duration",
   "StatsOptionIncludeZeros": "Include Zeros",
   "StatsColumnPlayer": "Player",
   "StatsColumnPlays": "Plays",
