--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -182,6 +182,7 @@
   "StatsGameDetails": "Detalles de juego",
   "StatsLocations": "Lugares",
   "StatsDaysSince": "Días desde...",
+  "StatsGameDuration": "Duration",
   "StatsOptionIncludeZeros": "Incluir ceros",
   "StatsColumnPlayer": "Jugador",
   "StatsColumnPlays": "Partidas",
