--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -181,6 +181,7 @@
   "StatsGameDetails": "Dettagli del gioco",
   "StatsLocations": "Luogo",
   "StatsDaysSince": "Giorni da...",
+  "StatsGameDuration": "Duration",
   "StatsOptionIncludeZeros": "Includere zero",
   "StatsColumnPlayer": "Giocatore",
   "StatsColumnPlays": "Partite",
