Added setting for Show Play Count and ver=5.7.9

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -106,6 +106,7 @@
   "SettingsDefaultLocation": "Default Location",
   "SettingsLanguage": "Language",
   "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
+  "SettingsEnableShowPlayCount": "Show Play Count",
   "SettingsNone": "none",
   "SettingsBlank": "blank",
   "SettingsSave": "Save Settings",
