--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -107,6 +107,7 @@
   "SettingsDefaultLocation": "Lugar por defecto",
   "SettingsLanguage": "Idioma",
   "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
+  "SettingsEnableShowPlayCount": "Show Play Count",
   "SettingsNone": "ninguna",
   "SettingsBlank": "vacío",
   "SettingsSave": "Guardar ajustes",
