--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -106,6 +106,7 @@
   "SettingsDefaultLocation": "Luogo predefinito",
   "SettingsLanguage": "Lingua",
   "SettingsFavoritesThumbSize": "Favorites Thumbnail Size",
+  "SettingsEnableShowPlayCount": "Show Play Count",
   "SettingsNone": "niente",
   "SettingsBlank": "vuoto",
   "SettingsSave": "Salva Impostazioni",
