Adding Game List with Rank option

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -179,6 +179,7 @@
   "StatsWinsByGame": "Wins by Game",
   "StatsBeginnersLuck": "Beginner's Luck",
   "StatsGameList": "Game List",
+  "StatsGameListRank": "Game List & Rank",
   "StatsGameDetails": "Game Details",
   "StatsLocations": "Locations",
   "StatsDaysSince": "Days Since...",
@@ -267,6 +268,7 @@
   "StatusUnsavedFilters": "You have unsaved filters.",
   "StatusInvalidDataFoundandRemoved": "Invalid data found and removed, check your settings.",
   "StatusUpdatingThumbnails": "Updating Thumbnails, Please Wait...",
+  "StatusLoadingRankData": "Loading Rank data, please wait...",
   "CommentLoggedAsPartOfThis": "Logged as part of this",
   "CommentParentPlay": "Parent Play",
   "SummarySentence_You_are_logging_a_play_of": "You are logging a play of $2, which you played $3.",
