--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -180,6 +180,7 @@
   "StatsWinsByGame": "Victorias por juego",
   "StatsBeginnersLuck": "Suerte del principiante",
   "StatsGameList": "Lista de juegos",
+  "StatsGameListRank": "Game List & Rank",
   "StatsGameDetails": "Detalles de juego",
   "StatsLocations": "Lugares",
   "StatsDaysSince": "Días desde...",
@@ -268,6 +269,7 @@
   "StatusUnsavedFilters": "Hay filtros sin salvar.",
   "StatusInvalidDataFoundandRemoved": "Invalid data found and removed, check your settings.",
   "StatusUpdatingThumbnails": "Updating Thumbnails, Please Wait...",
+  "StatusLoadingRankData": "Loading Rank data, please wait...",
   "CommentLoggedAsPartOfThis": "Logged as part of this",
   "CommentParentPlay": "Parent Play",
   "SummarySentence_You_are_logging_a_play_of": "You are logging a play of $2, which you played $3.",
