--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -179,6 +179,7 @@
   "StatsWinsByGame": "Vittorie per Gioco",
   "StatsBeginnersLuck": "Fortuna del principiante!",
   "StatsGameList": "Lista dei Giochi",
+  "StatsGameListRank": "Game List & Rank",
   "StatsGameDetails": "Dettagli del gioco",
   "StatsLocations": "Luogo",
   "StatsDaysSince": "Giorni da...",
@@ -267,6 +268,7 @@
   "StatusUnsavedFilters": "Hai Preferiti non salvati.",
   "StatusInvalidDataFoundandRemoved": "Dati invalidi trovati e rimossi, controlla le tue impostazioni.",
   "StatusUpdatingThumbnails": "Updating Thumbnails, Please Wait...",
+  "StatusLoadingRankData": "Loading Rank data, please wait...",
   "CommentLoggedAsPartOfThis": "Registrato come parte di questo",
   "CommentParentPlay": "Partita Base",
   "SummarySentence_You_are_logging_a_play_of": "Stai registrando una partita a $2, che hai giocato il $3.",
