Adding Temporal Hotness to the GUI

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -184,6 +184,7 @@
   "StatsLocations": "Locations",
   "StatsDaysSince": "Days Since...",
   "StatsGameDuration": "Duration",
+  "StatsTemporalHotness": "Temporal Hotness",
   "StatsOptionIncludeZeros": "Include Zeros",
   "StatsColumnPlayer": "Player",
   "StatsColumnPlays": "Plays",
