--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -185,6 +185,7 @@
   "StatsLocations": "Lugares",
   "StatsDaysSince": "Días desde...",
   "StatsGameDuration": "Duration",
+  "StatsTemporalHotness": "Temporal Hotness",
   "StatsOptionIncludeZeros": "Incluir ceros",
   "StatsColumnPlayer": "Jugador",
   "StatsColumnPlays": "Partidas",
