--- a/Source Code/i18n/il.json
+++ b/Source Code/i18n/il.json
@@ -184,6 +184,7 @@
   "StatsLocations": "Luogo",
   "StatsDaysSince": "Giorni da...",
   "StatsGameDuration": "Duration",
+  "StatsTemporalHotness": "Temporal Hotness",
   "StatsOptionIncludeZeros": "Includere zero",
   "StatsColumnPlayer": "Giocatore",
   "StatsColumnPlays": "Partite",
